# Server-soladiankcom

./: .cursorrules  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  BROWSER_CLEANUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  SOLANA_MIGRATION_DEMO.md  SOLANA_MIGRATION_SUCCESS.md  astro.config.mjs  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  package-lock.json  package.json  simple-deploy.sh  tailwind.config.mjs  test_solana.py  test_solana_system.py  tsconfig.json
.astro/: settings.json
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  __init__.py  alembic.ini  config.py  database.py  enhanced_solana_endpoints.py  env.example  init_db.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  services.py  simple_solana_endpoints.py  start.sh  test_api.py  test_solana_simple.py  websocket_endpoints.py  websocket_service.py
backend/ai/: advanced_ai_service.py  advanced_ml_service.py  advanced_recommendations.py  ai_search.py  deep_learning_models.py  fraud_detection.py  ml_service.py  predictive_analytics.py  recommendation_engine.py
backend/alembic/: env.py
backend/analytics/: advanced_analytics.py  blockchain_analytics.py  blockchain_intelligence.py  business_intelligence.py
backend/api/: documentation.py  optimization.py  solana_endpoints.py
backend/auth/: session_manager.py
backend/blockchain/: advanced_blockchain.py  defi_integration.py
backend/caching/: advanced_cache.py
backend/consciousness/: consciousness_ai.py
backend/database/: connection_pool.py
backend/dimensional/: dimensional_technology.py
backend/edge/: edge_computing.py
backend/enterprise/: advanced_api_management.py  api_management.py  enterprise_features.py  multi_tenancy.py  white_label.py
backend/gateway/: api_gateway.py
backend/holographic/: holographic_technology.py
backend/iot/: iot_service.py
backend/ipfs/: ipfs_service.py
backend/metaverse/: metaverse_service.py
backend/middleware/: cors_middleware.py  error_handler.py  logging_middleware.py  rate_limiter.py
backend/migrations/: add_database_indexes.py
backend/models/: solana_models.py
backend/monitoring/: advanced_monitoring.py  real_time_monitoring.py
backend/neural/: neural_interface.py
backend/nft/: advanced_nft_features.py  nft_tools.py
backend/performance/: advanced_optimization.py
backend/quantum/: quantum_computing.py
backend/schemas/: solana_schemas.py
backend/security/: advanced_security.py  quantum_security.py  security_service.py
backend/social/: copy_trading.py
backend/solana/: __init__.py  config.py  enhanced_service.py  nft_service.py  payment_processor.py  rpc_client.py  smart_contracts.py  token_service.py  transaction_service.py  wallet_service.py
backend/solana/smart_contracts/: advanced_programs.py  escrow_program.py
backend/space/: space_technology.py
backend/tasks/: background_tasks.py
backend/temporal/: temporal_management.py
backend/tests/: conftest.py  test_api_endpoints.py  test_integration.py  test_solana_comprehensive.py  test_solana_integration.py  test_solana_integration_comprehensive.py  test_solana_rpc.py  test_solana_service.py  test_solana_services.py
backend/utils/: logger.py
backend/websocket/: advanced_websocket.py  real_time_service.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx-dev.conf  nginx-frontend.conf  nginx.conf
docs/: API.md  BRAND_GUIDELINES.md  BRAND_IMPLEMENTATION.md  COLOR_SCHEMA.md  CSS_CLEANING_PLAN.md  CSS_OPTIMIZATION_COMPLETE.md  CURRENT_STATUS_ANALYSIS.md  DARK_MODE_OPTIMIZATION.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  FEATURES_DOCUMENTATION.md  FEATURE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PHASE_2_TESTING_COMPLETE.md  PHASE_3_FEATURE_PERFECTION_COMPLETE.md  PHASE_4_MISSING_FEATURES_COMPLETE.md  PHASE_5_MOBILE_APP_COMPLETE.md  PHASE_6_ENTERPRISE_FEATURES_COMPLETE.md  README.md  STYLING_STATUS.md  STYLING_SUMMARY.md  TESTING_ENHANCEMENT_PLAN.md  USER_GUIDE.md
frontend/: .eslintrc.js  CSS_OPTIMIZATION_SUMMARY.md  Dockerfile.dev  Dockerfile.prod  astro.config.mjs  css-performance-report.md  eslint.config.js  lighthouse.config.js  package.json  playwright.config.ts  postcss.config.mjs  tailwind.config.mjs  test-results.json  tsconfig.json  vitest.config.ts
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
microservices/: docker-compose.microservices.yml
mobile/: App.tsx  package.json
monitoring/: nginx.conf  (+6 more)
(+276 files in other folders)
